// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCta renders a button when only onclick is provided 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease,text-decoration 0.3s ease;
  transition: color 0.3s ease,text-decoration 0.3s ease;
  font-weight: 600;
  line-height: 1.25;
  color: #026cdf;
  display: inline-block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  outline: 0;
  background: transparent;
  padding: 0;
  cursor: pointer;
}

.c0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #026cdf;
}

.c0:active {
  color: #0150a7;
}

.c0:hover {
  color: #0150a7;
}

.c0.noFocus:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  className="sc-AxjAm c0  noFocus"
  onClick={[Function]}
  rel=""
  size={null}
  target="_self"
>
  I am a link
</button>
`;

exports[`LinkCta renders a default LinkCta 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease,text-decoration 0.3s ease;
  transition: color 0.3s ease,text-decoration 0.3s ease;
  font-weight: 600;
  line-height: 1.25;
  color: #026cdf;
  display: inline-block;
}

.c0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #026cdf;
}

.c0:active {
  color: #0150a7;
}

.c0:hover {
  color: #0150a7;
}

.c0.noFocus:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0  noFocus"
  href="http://localhost/"
  rel=""
  size={null}
  target="_self"
>
  I am a link
</a>
`;

exports[`LinkCta renders a span when no href or onClick provided 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease,text-decoration 0.3s ease;
  transition: color 0.3s ease,text-decoration 0.3s ease;
  font-weight: 600;
  line-height: 1.25;
  color: #026cdf;
  display: inline-block;
  cursor: pointer;
}

.c0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #026cdf;
}

.c0:active {
  color: #0150a7;
}

.c0:hover {
  color: #0150a7;
}

.c0.noFocus:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="sc-AxjAm c0  noFocus"
  rel=""
  size={null}
  target="_self"
>
  I am a link
</span>
`;

exports[`LinkCta renders correctly with reverse colors 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease,text-decoration 0.3s ease;
  transition: color 0.3s ease,text-decoration 0.3s ease;
  font-weight: 600;
  line-height: 1.25;
  color: #026cdf;
  display: inline-block;
  color: #3396ff;
}

.c0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #026cdf;
}

.c0:active {
  color: #0150a7;
}

.c0:hover {
  color: #0150a7;
}

.c0.noFocus:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus,
.c0:visited,
.c0:active,
.c0:hover {
  color: #80b5ef;
}

<a
  className="sc-AxjAm c0  noFocus"
  href="#"
  rel=""
  size={null}
  target="_self"
>
  I am a link
</a>
`;

exports[`LinkCta static size as pixels 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease,text-decoration 0.3s ease;
  transition: color 0.3s ease,text-decoration 0.3s ease;
  font-weight: 600;
  line-height: 1.25;
  color: #026cdf;
  display: inline-block;
  cursor: pointer;
}

.c0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #026cdf;
}

.c0:active {
  color: #0150a7;
}

.c0:hover {
  color: #0150a7;
}

.c0.noFocus:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="sc-AxjAm c0  noFocus"
  rel=""
  size="20px"
  target="_self"
>
  I am a link
</span>
`;

exports[`LinkCta static size from typography 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease,text-decoration 0.3s ease;
  transition: color 0.3s ease,text-decoration 0.3s ease;
  font-weight: 600;
  line-height: 1.25;
  color: #026cdf;
  display: inline-block;
  cursor: pointer;
}

.c0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:visited {
  color: #026cdf;
}

.c0:active {
  color: #0150a7;
}

.c0:hover {
  color: #0150a7;
}

.c0.noFocus:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="sc-AxjAm c0  noFocus"
  rel=""
  size="normal"
  target="_self"
>
  I am a link
</span>
`;
